password is not token!!!!

--- a/manage.html
+++ b/manage.html
@@ -28,7 +28,7 @@
 			<button>Change the password</button>
 		</form>
 		<hr>
-		<b>Change password</b> - Changes the token without changing the password. Causes anyone logged into your account to get logged out. (useful if you got hacked from a DevTools script)
+		<b>Change token</b> - Changes the token without changing the password. Causes anyone logged into your account to get logged out. (useful if you got hacked from a DevTools script)
 		<form action="/changeToken" method="POST">
 			<button>Change the token</button>
 		</form>
