password sec: never set logon password and never will

--- a/select_user_type.html
+++ b/select_user_type.html
@@ -22,9 +22,9 @@
             <br>
             - "new" (case-sensitive!) means a new account. This will register an account for you. If the name is already taken, the account WON'T be created.
             <br>
-            - "link" means link your account. This will link your account to an existing one. If you have a different password than your UltimateLogon account, the password will be changed for you.
+            - "link" means link your account. This will link your account to an existing one.
             <hr>
-            If you link, type your credentials: <input placeholder="DuckCloud ID" name="old_user"></input> <input placeholder="DuckCloud Secret" type="password" name="old_pass" title="This will be changed if you have a different password than your UltimateLogon account!"></input>
+            If you link, type your credentials: <input placeholder="DuckCloud ID" name="old_user"></input> <input placeholder="DuckCloud Secret" type="password" name="old_pass"></input>
             <hr>
             <button>Link or create</button>
         </form>
