More space for VMs! Less space for the warning!

--- a/template_2.html
+++ b/template_2.html
@@ -19,7 +19,7 @@
 		<br>
 		Input latency: <label id="inlat">n/a </label>ms
 		<br>
-		<noscript><b>Hello, we saw that you have no JavaScript. Sorry, but you cannot use the terminal of this VM. If you want to use the terminal, please enable JavaScript.</b> If you need help, visit <a href="https://enable-javascript.com/">https://enable-javascript.com/</a></noscript>
+		<noscript><b>Hello, we saw that you have no JavaScript. Sorry, but you cannot use the terminal of this VM.</b> If you want to use the terminal, <a href="https://enable-javascript.com/">please enable JavaScript.</a></noscript>
 		<div id="term" class="object" style="width: 736px;"></div>
 		<textarea id="copypaste" placeholder="Copy-paste box" title="Use this for copy-pasting purposes."></textarea>
 		<script>
