YAY A BACK ARROW

--- a/newVM.html
+++ b/newVM.html
@@ -12,6 +12,7 @@
 		<h1>☁️ DuckCloud</h1>
 		<hr>
 		<form action="/newVM" method="post">
+			<a href="/" class="arrow">←</a>
 			<label>VM name</label>: <input name="vm_name" placeholder="CloudVM" required></input>
 			<br>
 			Linux distro: Debian (11 bullseye)
