free api documentation

--- a/template.html
+++ b/template.html
@@ -8,6 +8,7 @@
 	  <link rel="stylesheet" href="/regular.css"></link>
 	</head>
 	<body>
+		<a href="/apidocs" class="apis-notice">Use DuckCloud API!</a>
 		<a href="/manage" style="text-decoration: none;" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
