--- a/apidocs.html
+++ b/apidocs.html
@@ -186,7 +186,7 @@
         <br>
         Redirects the user to /main if they are logged in, otherwise does the configuration the user specified and returns to /.
         <hr>
-        <b style="color: #00ff00;">// DuckCloud integration with UltimateLogon ENDS HERE. Bots the endpoints declared here.</b>
+        <b style="color: #00ff00;">// DuckCloud integration with UltimateLogon ENDS HERE. Bots can use the endpoints declared here.</b>
         <hr>
         <h3>GET <a href="/manage">/manage</a></h3>
         <em>This operation requires proper logon. Users will get redirected to / if they have an incorrect token or didn't log in yet.</em>
