--- a/chown.html
+++ b/chown.html
@@ -25,7 +25,7 @@
 			<br>
 			NOTE 2: If the user has no PRO flag and already has 1 machine, the ownership won't be changed and an error message will be shown.
 			<hr>
-			Username: <input name="username" placeholder="New owner's DuckCloud ID" required></input>
+			DuckCloud ID: <input name="username" placeholder="New owner's DuckCloud ID" required></input>
 			<hr>
 			<button onclick="return confirm('Are you sure?');">Change ownership</button>
 		</form>
