--- a/manage.html
+++ b/manage.html
@@ -19,16 +19,16 @@
 			<button>Log out</button>
 		</form>
 		<hr>
-		<b>Change password</b> - Changes the password and the token.
+		<b>Change DuckCloud secret</b> - Changes the DuckCloud secret and the token.
 		<form action="/changePassword" method="POST">
-			Old password: <input name="oldPassword" type="password" required></input>
+			Old DuckCloud secret: <input name="oldPassword" type="DuckCloud secret" required></input>
 			<br>
-			New password: <input name="newPassword" type="password" required></input>
+			New DuckCloud secret: <input name="newPassword" type="DuckCloud secret" required></input>
 			<br>
-			<button>Change the password</button>
+			<button>Change the DuckCloud secret</button>
 		</form>
 		<hr>
-		<b>Change token</b> - Changes the token without changing the password. Causes anyone logged into your account to get logged out. (useful if you got hacked from a DevTools script)
+		<b>Change token</b> - Changes the token without changing the DuckCloud secret. Causes anyone logged into your account to get logged out. (useful if you got hacked from a DevTools script)
 		<form action="/changeToken" method="POST">
 			<button>Change the token</button>
 		</form>
@@ -36,11 +36,11 @@
 		<hr>
 		<b>Unlink from UltimateLogon</b> - You can unlink your UltimateLogon account from DuckCloud ID.
 		<form action="/ul_unlink" method="POST">
-			Password: <input name="password" type="password" required></input>
+			Password: <input name="DuckCloud secret" type="DuckCloud secret" required></input>
 			<br>
 			<button>Disassociate</button>
 			<br>
-			<em>If you forgot your password, it's great time for you to call PC#7105. Or if you have the rights to remove UltimateLogon but don't have the password, you can just remove the duckcloud_token property from the JSON of AppData.</em>
+			<em>If you forgot your DuckCloud secret, it's great time for you to call PC#7105. Or if you have the rights to remove UltimateLogon but don't have the DuckCloud secret, you can just remove the duckcloud_token property from the JSON of AppData.</em>
 		</form>
 		<nodejs-embed>associatedCE</nodejs-embed>
 		<hr>
@@ -53,7 +53,7 @@
 		<hr>
 		<b>Destroy the account</b> - Irreversible action to remove main data associated with you. The VMs will be stopped and removed. The DuckCloud ID will appear registerable again. The VMs will take a while if you have them running, so don't click away.
 		<form action="/destroyAccount" method="POST">
-			Password: <input name="password" type="password" required></input>
+			Password: <input name="DuckCloud secret" type="DuckCloud secret" required></input>
 			<br>
 			<button onclick="return confirm('Are you really really sure?')">Destroy the account</button>
 		</form>
