--- a/template.html
+++ b/template.html
@@ -13,6 +13,8 @@
 		<h1>☁️ DuckCloud</h1>
 		<hr>
 		<nodejs-embed>dockers</nodejs-embed>
-		<a class="add-vm" href="/newVM">+</a>
+		<a class="add-vm" href="/newVM">
+			<label class="add-vm-content">+</label>
+		</a>
 	</body>
 </html>
