why did pc commit node modules

--- a/newVM.html
+++ b/newVM.html
@@ -18,6 +18,7 @@
 			Linux distro: <select name="distro" required>
 				<option value="debian" selected>Debian (11 bullseye)</option>
 				<option value="archlinux">Arch Linux (btw; 2023.02.01)</option>
+				<option value="duckcloud/suspiral">Suspiral (11 bullseye)</option>
 			</select>
 			<br>
 			<input name="shouldHaveNetworking" onclick="NetworkingAgreement(this)" type="checkbox"></input> Enable networking
