--- a/corsmanager.html
+++ b/corsmanager.html
@@ -21,7 +21,7 @@
         <hr>
         This modification is temporary. You should go on this page from time to time.
         <br>
-        These domains can access DuckCloud APIs from your API:
+        These domains can access DuckCloud APIs from your IP:
         <br>
         <nodejs-embed>
             let oops = ipmods;
