--- a/corsmanager.html
+++ b/corsmanager.html
@@ -4,7 +4,7 @@
 	  <meta charset="UTF-8">
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <title>Page(ReDir)@DuckCloud</title>
+	  <title>Page(CORS)@DuckCloud</title>
 	  <link rel="stylesheet" href="/regular.css"></link>
 	</head>
 	<body>
