--- a/corsmanager.html
+++ b/corsmanager.html
@@ -13,7 +13,7 @@
         Using CORS can be dangerous for your account. <br>
         To prevent malicious usage, you must have JavaScript enabled. <br>
         <noscript><b>No JavaScript is enabled. CORS access won't be allowed.</b> <br></noscript>
-        Please input the domain name (must not include any wildcards) that can be used with your IP: <form action="/cors" method="post">
+        Please input the domain name (can't include any wildcards, as they won't work!) that can be used with your IP: <form action="/cors" method="post">
             <input name="domain" placeholder="example.com"></input>
             <input name="botpuzzl_solvd" id="botpuzzl_solvd" hidden type="hidden"></input>
             <button disabled id="botpuzzl_snd">Send</button>
