--- a/manage.html
+++ b/manage.html
@@ -41,7 +41,7 @@
 			<br>
 			<button>Disassociate</button>
 			<br>
-			<em>If you forgot your DuckCloud secret, it's great time for you to call PC#7105. Or if you have the rights to remove UltimateLogon but don't have the DuckCloud secret, you can just remove the duckcloud_token property from the JSON of AppData.</em>
+			<em>If you forgot your DuckCloud secret, contact your system administrator or remove the <code>duckcloud_token</code> property from AppData.</em>
 		</form>
 		<nodejs-embed>associatedCE</nodejs-embed>
 		<hr>
