--- a/manage.html
+++ b/manage.html
@@ -8,7 +8,7 @@
 	  <link rel="stylesheet" href="/regular.css"></link>
 	</head>
 	<body>
-		<a href="/logoff" style="text-decoration: none;" class="logged-in-as" title="Logs you off!">🚪 <nodejs-embed>username</nodejs-embed></a>
+		<a href="/logoff" class="logged-in-as" title="Logs you off!">🚪 <nodejs-embed>username</nodejs-embed></a>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
 		<a href="/" class="arrow">←</a> Configuring DuckCloud experience
