--- a/not_found.html
+++ b/not_found.html
@@ -15,7 +15,7 @@
 		<a href="/" class="arrow">←</a> 404 Not Found
 		<br>
 		<b>Most of the time, this is nothing you're looking for.</b>
-		<div id="term" class="object" style="width: 736px;">
+		<div id="term" class="object termWidth">
 			<div dir="ltr" class="terminal xterm xterm-dom-renderer-owner-1" tabindex="0">
 				<div class="xterm-viewport" style="background-color: rgb(0, 0, 0);">
 					<div class="xterm-scroll-area" style="height: 432px;"></div>
