--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<a href="/apidocs" class="apis-notice">Use DuckCloud API!</a>
-		<a href="/manage" style="text-decoration: none;" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
+		<a href="/manage" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
 		<nodejs-embed>dockers</nodejs-embed>
