--- a/target_not_pro_yet.html
+++ b/target_not_pro_yet.html
@@ -8,7 +8,7 @@
 	  <link rel="stylesheet" href="/regular.css"></link>
 	</head>
 	<body>
-		<a href="/manage" style="text-decoration: none;" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
+		<a href="/manage" class="logged-in-as">🚪 <nodejs-embed>username</nodejs-embed></a>
 		<h1>☁️ DuckCloud</h1>
 		<hr>
 		<a href="/settings/<nodejs-embed>vm_count</nodejs-embed>" class="arrow">←</a> | <nodejs-embed>vm_name</nodejs-embed>
